src/App.css
@import './style/constantes.css';

body {
  margin: 0;
}

.App {
  text-align: center;
  display : flex;
  flex-direction: column;
  min-height: 100vh;
}

main {
  flex: 1;
}

.mainApp {
  margin-top: 140px;
}

.modalMenu {
  position: fixed;
  top: 0;
  left: 0;
  width: 60%;
  height: 100%;
  background-color: var(--dark-grey);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: 99;
}

.logoCheminNav {
  position: absolute;
  top: 30px;
  height: 20vh;
}

.navLink {
  text-decoration: none;
  color: white;
  font-size: 1.2em;
  margin-bottom: 10px;
}

.deconnexion {
  color: var(--red);
  font-size: 1.3em;
  cursor: pointer;
  font-weight: 500;
  margin-top: 40px;
}

.navLinks {
  display: flex;
  flex-direction: column;
  align-items: baseline;
  height: 60%;
  width: 100%;
  margin-top: 20vh;
  padding-left: 10px;
  margin-left: 10px;
}

.separator {
  margin-top: 30px;
  margin-bottom: 20px;
  width: 90%;
  height: 2px;
  background-color: white;
}

.linksAdmin {
  display: flex;
  flex-direction: column;
  align-items: baseline;
  width: 100%;
}

.adminH2 {
  color: white;
  font-size: 25px;
  font-weight: 500;
  text-decoration: underline;
}

